[gd_scene load_steps=9 format=3 uid="uid://3xyjbkr4js7v"]

[ext_resource type="Texture2D" uid="uid://jbxgg1stfefq" path="res://assets/backgrounds/card_square.png" id="1_i3y20"]
[ext_resource type="Texture2D" uid="uid://bemoh5pjkswqf" path="res://assets/backgrounds/levelBackground.png" id="2_15e0t"]
[ext_resource type="PackedScene" uid="uid://cqu0trx4tn07j" path="res://sence/fight/ui/cardButton.tscn" id="2_qleol"]
[ext_resource type="Texture2D" uid="uid://rpyqwom4dpsa" path="res://assets/UI/button/cancel_normal.png" id="3_1t2l3"]
[ext_resource type="Texture2D" uid="uid://byfgnml4vxyww" path="res://assets/UI/button/cancel_press.png" id="4_0twgn"]
[ext_resource type="Script" path="res://script/start/cancelButton.gd" id="5_3gxni"]
[ext_resource type="Texture2D" uid="uid://cff6qvysicflb" path="res://assets/UI/button/smallButtonNormal.png" id="7_b1dvo"]
[ext_resource type="Texture2D" uid="uid://5800a47dpa4q" path="res://assets/UI/button/smallButtonPress.png" id="8_avq5c"]

[node name="BookWindow" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.262745)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 100.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="main"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 16
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="cardBackground" type="TextureRect" parent="main/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_i3y20")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="main/HBoxContainer/cardBackground"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 48.0
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="main/HBoxContainer/cardBackground/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="cardButton1" parent="main/HBoxContainer/cardBackground/VBoxContainer/HBoxContainer" instance=ExtResource("2_qleol")]
layout_mode = 2
cardType = 3

[node name="cardButton2" parent="main/HBoxContainer/cardBackground/VBoxContainer/HBoxContainer" instance=ExtResource("2_qleol")]
layout_mode = 2
cardType = 3

[node name="cardButton3" parent="main/HBoxContainer/cardBackground/VBoxContainer/HBoxContainer" instance=ExtResource("2_qleol")]
layout_mode = 2
cardType = 3

[node name="cardButton4" parent="main/HBoxContainer/cardBackground/VBoxContainer/HBoxContainer" instance=ExtResource("2_qleol")]
layout_mode = 2
cardType = 3

[node name="cardButton5" parent="main/HBoxContainer/cardBackground/VBoxContainer/HBoxContainer" instance=ExtResource("2_qleol")]
layout_mode = 2
cardType = 3

[node name="textBackground" type="TextureRect" parent="main/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_15e0t")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Picture" type="TextureRect" parent="main/HBoxContainer/textBackground"]
layout_mode = 0
offset_left = 120.0
offset_top = 16.0
offset_right = 120.0
offset_bottom = 16.0

[node name="Name" type="Label" parent="main/HBoxContainer/textBackground"]
layout_mode = 0
offset_left = 141.0
offset_top = 97.0
offset_right = 221.0
offset_bottom = 139.0
autowrap_mode = 3

[node name="bookCancelButton" type="TextureButton" parent="main"]
layout_mode = 0
offset_left = 680.0
offset_right = 700.0
offset_bottom = 20.0
texture_normal = ExtResource("3_1t2l3")
texture_pressed = ExtResource("4_0twgn")
texture_hover = ExtResource("4_0twgn")
script = ExtResource("5_3gxni")

[node name="changePageButton" type="TextureButton" parent="main"]
layout_mode = 0
offset_left = 200.0
offset_top = 390.0
offset_right = 264.0
offset_bottom = 410.0
texture_normal = ExtResource("7_b1dvo")
texture_pressed = ExtResource("8_avq5c")
texture_hover = ExtResource("8_avq5c")
script = ExtResource("5_3gxni")

[connection signal="pressed" from="main/bookCancelButton" to="main/bookCancelButton" method="_on_pressed"]
[connection signal="pressed" from="main/changePageButton" to="main/changePageButton" method="_on_pressed"]
