[gd_scene load_steps=11 format=3 uid="uid://bs1fdm6sstmej"]

[ext_resource type="Texture2D" uid="uid://b88uq4r408yt2" path="res://assets/backgrounds/spr_broad.png" id="1_crtae"]
[ext_resource type="Texture2D" uid="uid://rpyqwom4dpsa" path="res://assets/UI/button/cancel_normal.png" id="2_0rodr"]
[ext_resource type="PackedScene" uid="uid://cqu0trx4tn07j" path="res://sence/fight/ui/cardButton.tscn" id="2_ltcr5"]
[ext_resource type="Texture2D" uid="uid://woqtbppeagyp" path="res://assets/UI/button/buyButton.png" id="3_c00cl"]
[ext_resource type="Texture2D" uid="uid://byfgnml4vxyww" path="res://assets/UI/button/cancel_press.png" id="3_dp3fp"]
[ext_resource type="Script" path="res://script/start/cancelButton.gd" id="4_mip36"]
[ext_resource type="Texture2D" uid="uid://hcjvp12prr60" path="res://assets/backgrounds/moneyBackground.png" id="7_dp2nj"]
[ext_resource type="AudioStream" uid="uid://c5qsbam30no4x" path="res://assets/music/se/other/click.ogg" id="7_i2ej7"]
[ext_resource type="FontFile" uid="uid://ck8rgcys0xfn0" path="res://assets/font/Minecraft AE.ttf" id="8_fvvgb"]
[ext_resource type="Texture2D" uid="uid://ienrfyup176c" path="res://assets/objects/tower/emerald.png" id="9_j2wll"]

[node name="BuyCardWindow" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.262745)

[node name="Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -83.0
offset_right = -124.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Main"]
layout_mode = 0
offset_right = 248.0
offset_bottom = 166.0
texture = ExtResource("1_crtae")

[node name="HBoxContainer" type="HBoxContainer" parent="Main"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 238.0
offset_bottom = 92.0
theme_override_constants/separation = 10

[node name="cardButton1" parent="Main/HBoxContainer" instance=ExtResource("2_ltcr5")]
layout_mode = 2
texture_normal = ExtResource("3_c00cl")
cardType = 4

[node name="cardButton2" parent="Main/HBoxContainer" instance=ExtResource("2_ltcr5")]
layout_mode = 2
texture_normal = ExtResource("3_c00cl")
cardType = 4

[node name="cardButton3" parent="Main/HBoxContainer" instance=ExtResource("2_ltcr5")]
layout_mode = 2
texture_normal = ExtResource("3_c00cl")
cardType = 4

[node name="cardButton4" parent="Main/HBoxContainer" instance=ExtResource("2_ltcr5")]
layout_mode = 2
texture_normal = ExtResource("3_c00cl")
cardType = 4

[node name="buyCancelButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 255.5
offset_right = 275.5
offset_bottom = 20.0
texture_normal = ExtResource("2_0rodr")
texture_pressed = ExtResource("3_dp3fp")
texture_hover = ExtResource("3_dp3fp")
script = ExtResource("4_mip36")

[node name="click" type="AudioStreamPlayer" parent="Main/buyCancelButton"]
stream = ExtResource("7_i2ej7")

[node name="emeraldSquare" type="TextureRect" parent="Main"]
layout_mode = 0
offset_left = 102.5
offset_top = 130.0
offset_right = 145.5
offset_bottom = 152.0
texture = ExtResource("7_dp2nj")

[node name="emeraldNumber" type="Label" parent="Main/emeraldSquare"]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 29.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_fvvgb")
theme_override_font_sizes/font_size = 14
text = "90"

[node name="icon" type="TextureRect" parent="Main/emeraldSquare"]
layout_mode = 0
offset_left = 27.0
offset_top = 3.0
offset_right = 43.0
offset_bottom = 19.0
texture = ExtResource("9_j2wll")

[connection signal="pressed" from="Main/buyCancelButton" to="Main/buyCancelButton" method="_on_pressed"]
