[gd_scene load_steps=7 format=3 uid="uid://byp0sfn4apxll"]

[ext_resource type="Texture2D" uid="uid://bemoh5pjkswqf" path="res://assets/backgrounds/levelBackground.png" id="1_ru38w"]
[ext_resource type="PackedScene" uid="uid://cluf3870eyfa3" path="res://sence/start/levelButton.tscn" id="2_uk15b"]
[ext_resource type="Texture2D" uid="uid://cetr57d7eqdcg" path="res://assets/UI/button/level3.png" id="3_newxj"]
[ext_resource type="Texture2D" uid="uid://rpyqwom4dpsa" path="res://assets/UI/button/cancel_normal.png" id="3_w51yo"]
[ext_resource type="Texture2D" uid="uid://byfgnml4vxyww" path="res://assets/UI/button/cancel_press.png" id="4_pk3dp"]
[ext_resource type="Script" path="res://script/start/cancelButton.gd" id="5_nhy6r"]

[node name="levelChoiceWindow" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.262745)

[node name="MainMove" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 20.0

[node name="SecondMove" type="Control" parent="MainMove"]
anchors_preset = 0
offset_top = 20.0
offset_bottom = 20.0

[node name="LevelBackground" type="TextureRect" parent="MainMove/SecondMove"]
layout_mode = 2
offset_right = 384.0
offset_bottom = 384.0
texture = ExtResource("1_ru38w")

[node name="LevelContainer" type="VBoxContainer" parent="MainMove/SecondMove"]
layout_mode = 2
offset_left = 30.0
offset_top = 100.0
offset_right = 358.0
offset_bottom = 252.0
theme_override_constants/separation = 32

[node name="HBoxContainer1" type="HBoxContainer" parent="MainMove/SecondMove/LevelContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Level1" parent="MainMove/SecondMove/LevelContainer/HBoxContainer1" instance=ExtResource("2_uk15b")]
layout_mode = 2

[node name="Level2" parent="MainMove/SecondMove/LevelContainer/HBoxContainer1" instance=ExtResource("2_uk15b")]
layout_mode = 2

[node name="Level3" parent="MainMove/SecondMove/LevelContainer/HBoxContainer1" instance=ExtResource("2_uk15b")]
layout_mode = 2

[node name="Level4" parent="MainMove/SecondMove/LevelContainer/HBoxContainer1" instance=ExtResource("2_uk15b")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMove/SecondMove/LevelContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Level5" parent="MainMove/SecondMove/LevelContainer/HBoxContainer2" instance=ExtResource("2_uk15b")]
layout_mode = 2
texture_normal = ExtResource("3_newxj")

[node name="Level6" parent="MainMove/SecondMove/LevelContainer/HBoxContainer2" instance=ExtResource("2_uk15b")]
layout_mode = 2
texture_normal = ExtResource("3_newxj")

[node name="Level7" parent="MainMove/SecondMove/LevelContainer/HBoxContainer2" instance=ExtResource("2_uk15b")]
layout_mode = 2
texture_normal = ExtResource("3_newxj")

[node name="Level8" parent="MainMove/SecondMove/LevelContainer/HBoxContainer2" instance=ExtResource("2_uk15b")]
layout_mode = 2
texture_normal = ExtResource("3_newxj")

[node name="levelCancelButton" type="TextureButton" parent="MainMove"]
layout_mode = 2
offset_left = 400.0
offset_right = 420.0
offset_bottom = 20.0
texture_normal = ExtResource("3_w51yo")
texture_pressed = ExtResource("4_pk3dp")
texture_hover = ExtResource("4_pk3dp")
script = ExtResource("5_nhy6r")

[connection signal="pressed" from="MainMove/levelCancelButton" to="MainMove/levelCancelButton" method="_on_pressed"]
